--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "formik": "^1.5.8",
+    "native-base": "^2.10.0",
     "react": "^16.8.6",
     "react-native": "^0.60.4",
-    "react-native-gesture-handler": "^1.4.0",
-    "native-base": "^2.10.0",
-    "react-navigation": "^3.0.8",
+    "react-native-firebase": "~5.5.6",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-gesture-handler": "^1.4.0",
     "react-native-modal": "^7.0.2",
+    "react-native-modalbox": "^1.6.0",
     "react-native-vector-icons": "^6.0.2",
-    "react-native-modalbox": "^1.6.0"
+    "react-navigation": "^3.0.8",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
@@ -25,6 +28,7 @@
     "babel-jest": "24.8.0",
     "eslint": "6.1.0",
     "jest": "24.8.0",
+    "jetifier": "^1.6.4",
     "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.6"
   },
