--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "react-native-firebase": "~5.5.6",
     "react-native-fontawesome": "^5.7.0",
     "react-native-gesture-handler": "^1.4.0",
+    "react-native-image-picker": "1.1.0",
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
+    "react-native-tag-select": "^2.0.0",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^3.0.8",
+    "react-native-simple-toast": "^0.1.1",
     "yup": "^0.27.0"
   },
   "devDependencies": {
