--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "formik": "^1.5.8",
+    "hex-to-rgba": "^1.0.2",
     "native-base": "^2.10.0",
     "react": "^16.8.6",
     "react-native": "^0.60.4",
@@ -22,7 +23,12 @@
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^3.0.8",
     "react-native-simple-toast": "^0.1.1",
-    "yup": "^0.27.0"
+    "react-native-circular-progress": "^1.1.0",
+    "react-native-linear-gradient": "^2.5.4",
+    "yup": "^0.27.0",
+    "react-native-svg": "^9.5.1",
+    "react-navigation-drawer": "^2.2.2",
+    "react-native-reanimated": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
