--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "yup": "^0.27.0",
     "react-native-svg": "^9.5.1",
     "react-navigation-drawer": "^2.2.2",
-    "react-native-reanimated": "^1.3.0"
+    "react-native-reanimated": "^1.3.0",
+    "react-native-slider": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
