--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,10 +191,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-firestore:21.1.0'
+    //implementation 'com.google.firebase:firebase-auth:19.0.0'
+   // implementation 'com.google.firebase:firebase-firestore:21.1.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)' 
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
