--- a/package.json
+++ b/package.json
@@ -8,28 +8,32 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/google-signin": "^3.0.2",
+    "@react-native-firebase/app": "^6.0.1",
+    "@react-native-firebase/auth": "^6.0.1",
+    "@react-native-firebase/firestore": "^6.0.1",
     "formik": "^1.5.8",
     "hex-to-rgba": "^1.0.2",
     "native-base": "^2.10.0",
     "react": "^16.8.6",
     "react-native": "^0.60.4",
-    "react-native-firebase": "~5.5.6",
+    "react-native-circular-progress": "^1.1.0",
+    "react-native-fbsdk": "^1.0.4",
     "react-native-fontawesome": "^5.7.0",
     "react-native-gesture-handler": "^1.4.0",
-    "react-native-image-picker": "1.1.0",
+    "react-native-image-picker": "^0.28.0",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
+    "react-native-reanimated": "^1.3.0",
+    "react-native-simple-toast": "^0.1.1",
+    "react-native-slider": "^0.11.0",
+    "react-native-svg": "^9.5.1",
     "react-native-tag-select": "^2.0.0",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^3.0.8",
-    "react-native-simple-toast": "^0.1.1",
-    "react-native-circular-progress": "^1.1.0",
-    "react-native-linear-gradient": "^2.5.4",
-    "yup": "^0.27.0",
-    "react-native-svg": "^9.5.1",
     "react-navigation-drawer": "^2.2.2",
-    "react-native-reanimated": "^1.3.0",
-    "react-native-slider": "^0.11.0"
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
