--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,8 @@ target 'Papyrus_60' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'Papyrus_60Tests' do
     inherit! :search_paths
     # Pods for testing
