--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission-sdk-23 android:name="android.permission.CAMERA"/>
     <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
+    
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -18,7 +20,12 @@
         android:allowBackup="true"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      >
+
+      <provider android:authorities="com.facebook.app.FacebookContentProvider2518782285059973"
+          android:name="com.facebook.FacebookContentProvider"
+          android:exported="true" />
       <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
       <activity
         android:name=".MainActivity"
