--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,8 @@
 rootProject.name = 'Papyrus_60'
+//include ':@react-native-community_status-bar'
+//project(':@react-native-community_status-bar').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/status-bar/android')
+include ':react-native-svg'
+project(':react-native-svg').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-svg/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
+
