--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "react-native-linear-gradient": "^2.5.4",
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
+    "react-native-parallax-header": "^1.1.3",
     "react-native-reanimated": "^1.3.0",
     "react-native-simple-toast": "^0.1.1",
     "react-native-slider": "^0.11.0",
     "react-native-svg": "^9.13.2",
     "react-native-tag-select": "^2.0.0",
     "react-native-vector-icons": "^6.0.2",
-    "react-navigation": "^3.0.8",
-    "react-navigation-drawer": "^2.2.2",
+    "react-navigation": "^4.0.0",
+    "react-navigation-drawer": "^2.3.3",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.2",
     "redux-devtools-extension": "^2.13.8",
     "yup": "^0.27.0"
   },
