--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "yup": "^0.27.0"
   },
