--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-redux": "^7.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "react-native-video": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
