--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/google-signin": "^3.0.2",
+    "@react-native-community/slider": "^2.0.8",
     "@react-native-firebase/app": "^6.0.1",
     "@react-native-firebase/auth": "^6.0.1",
     "@react-native-firebase/firestore": "^6.0.1",
@@ -36,6 +37,7 @@
     "react-native-tag-select": "^2.0.0",
     "react-native-track-player": "^2.0.0-rc13",
     "react-native-vector-icons": "^6.0.2",
+    "react-native-video": "^5.0.2",
     "react-navigation": "^4.0.0",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
@@ -43,8 +45,7 @@
     "react-redux": "^7.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "yup": "^0.27.0",
-    "react-native-video": "^5.0.2"
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
