--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@ xmlns:tools="http://schemas.android.com/tools"
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <activity android:name="com.dimowner.audiorecorder.app.main.MainActivity"
+					 android:launchMode= "singleTask"
+					 android:screenOrientation="portrait">
+		</activity>
     </application>
 
 </manifest>
