--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,8 @@ target 'Papyrus_60' do
 
   pod 'react-native-statusbar', :path => '../node_modules/@react-native-community/status-bar'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'Papyrus_60Tests' do
     inherit! :search_paths
     # Pods for testing
