--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/google-signin": "^3.0.2",
+    "@react-native-community/google-signin": "^3.0.4",
     "@react-native-community/slider": "^2.0.8",
     "@react-native-firebase/app": "^6.0.1",
     "@react-native-firebase/auth": "^6.0.1",
@@ -31,6 +31,7 @@
     "react-native-parallax-header": "^1.1.3",
     "react-native-react-native-recorder": "file:react-native-react-native-recorder",
     "react-native-reanimated": "^1.3.0",
+    "react-native-screens": "^2.0.0-beta.1",
     "react-native-simple-toast": "^0.1.1",
     "react-native-slider": "^0.11.0",
     "react-native-svg": "^9.13.2",
@@ -39,6 +40,7 @@
     "react-native-vector-icons": "^6.0.2",
     "react-native-video": "^5.0.2",
     "react-navigation": "^4.0.0",
+    "react-navigation-backhandler": "^1.4.0",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
