--- a/react-native-react-native-recorder/android/build.gradle
+++ b/react-native-react-native-recorder/android/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     implementation "com.jakewharton.timber:timber:4.7.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.annotation:annotation:1.1.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta4"
+    implementation "androidx.cardview:cardview:1.0.0"
 
 }
 
