--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cli": "^3.1.0",
     "@react-native-community/google-signin": "^3.0.4",
     "@react-native-community/slider": "^2.0.8",
     "@react-native-firebase/app": "^6.0.1",
@@ -31,7 +32,7 @@
     "react-native-parallax-header": "^1.1.3",
     "react-native-react-native-recorder": "file:react-native-react-native-recorder",
     "react-native-reanimated": "^1.3.0",
-    "react-native-screens": "^2.0.0-beta.1",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-simple-toast": "^0.1.1",
     "react-native-slider": "^0.11.0",
     "react-native-svg": "^9.13.2",
