--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^6.0.1",
     "@react-native-firebase/auth": "^6.0.1",
     "@react-native-firebase/firestore": "^6.0.1",
+    "@react-native-firebase/storage": "^6.3.3",
     "faker": "^4.1.0",
     "formik": "^1.5.8",
     "hex-to-rgba": "^1.0.2",
@@ -26,10 +27,12 @@
     "react-native-fbsdk": "^1.0.4",
     "react-native-fontawesome": "^5.7.0",
     "react-native-gesture-handler": "^1.4.0",
+    "react-native-image-picker": "^1.0.1",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
     "react-native-parallax-header": "^1.1.3",
+    "react-native-progress": "^4.0.3",
     "react-native-react-native-recorder": "file:react-native-react-native-recorder",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.23",
@@ -37,6 +40,7 @@
     "react-native-slider": "^0.11.0",
     "react-native-svg": "^9.13.2",
     "react-native-tag-select": "^2.0.0",
+    "react-native-tags-input": "^1.0.7",
     "react-native-track-player": "^2.0.0-rc13",
     "react-native-vector-icons": "^6.0.2",
     "react-native-video": "^5.0.2",
