(i) removed listening stats, (ii) added Papyrus main header while loading in AuthLoading Screen & in HomeScreen, (iii) added searchbar while loading Explore Screen, (iv) centred the Activity Indicator to the middle in every screen, (v) changed all unnecessary onSnapshot Listeners to get() queries, (vi) converted editProfile into a functional component, (vii) resizing & uploading images in editProfile
Former-commit-id: 4a5bb1e4121cc2291f08f795f9fab692e8cd5385

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,7 @@
 rootProject.name = 'Papyrus_60'
+
+include ':@react-native-firebase_app'
+project(':@react-native-firebase_app').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/app/android')
 //include ':@react-native-community_status-bar'
 //project(':@react-native-community_status-bar').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/status-bar/android')
 include ':react-native-svg'
