--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,6 +191,7 @@ android {
 
 dependencies {
     implementation project(':react-native-svg')
+   // implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //implementation 'com.google.firebase:firebase-auth:19.0.0'
    // implementation 'com.google.firebase:firebase-firestore:21.1.0'
