--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,10 @@
     "node": "8"
   },
   "dependencies": {
-    "algoliasearch": "^3.35.1",
-    "firebase-admin": "^8.7.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.3.0", 
+    "fs-extra": "^8.1.0",
+    "sharp": "^0.22.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
