--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -190,6 +190,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-extra-dimensions-android')
     implementation project(':react-native-video')
     implementation project(':react-native-svg')
     implementation fileTree(dir: "libs", include: ["*.jar"])
