--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,15 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "dependencies": {
+    "@google-cloud/storage": "^4.3.1",
     "algoliasearch": "^3.35.1",
-    "firebase-admin": "^8.7.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-admin": "^8.9.2",
+    "firebase-functions": "^3.1.0",
+    "fs-extra": "^8.1.0",
+    "sharp": "^0.22.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
