--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-native-firebase/firestore": "^6.0.1",
     "@react-native-firebase/storage": "^6.3.3",
     "faker": "^4.1.0",
+    "firebase-admin": "^8.9.2",
+    "firebase-functions": "^3.3.0",
     "formik": "^1.5.8",
+    "fs-extra": "^8.1.0",
     "hex-to-rgba": "^1.0.2",
     "moment": "^2.24.0",
     "native-base": "^2.10.0",
@@ -24,10 +27,12 @@
     "react-moment": "^0.9.6",
     "react-native": "^0.61.5",
     "react-native-circular-progress": "^1.3.3",
+    "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fbsdk": "^1.0.4",
     "react-native-fontawesome": "^5.7.0",
     "react-native-gesture-handler": "^1.4.0",
     "react-native-image-picker": "^1.0.1",
+    "react-native-image-resizer": "^1.2.0",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
