--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,9 @@
     "node": "8"
   },
   "dependencies": {
+    "firebase": "^7.9.3",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0", 
+    "firebase-functions": "^3.3.0",
     "fs-extra": "^8.1.0",
     "sharp": "^0.22.1"
   },
