--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@react-native-firebase/auth": "^6.0.1",
     "@react-native-firebase/firestore": "^6.0.1",
     "@react-native-firebase/storage": "^6.3.3",
-    "firebase-admin": "^8.9.2",
-    "firebase-functions": "^3.3.0",
     "formik": "^1.5.8",
     "fs-extra": "^8.1.0",
     "hex-to-rgba": "^1.0.2",
@@ -54,6 +52,7 @@
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
+    "react-navigation-transitions": "^1.0.12",
     "react-redux": "^7.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
