--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-image-picker": "^1.0.1",
     "react-native-image-resizer": "^1.2.0",
     "react-native-linear-gradient": "^2.5.4",
+    "react-native-material-menu": "^1.0.0",
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
     "react-native-parallax-header": "^1.1.3",
