--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,7 +191,7 @@ android {
 
 dependencies {
     implementation project(':react-native-extra-dimensions-android')
-    implementation project(':react-native-video')
+    implementation project(':react-native-video-exoplayer')
     implementation project(':react-native-svg')
     implementation(project(":react-native-google-signin")){
         exclude group: "com.google.android.gms" // very important
