--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^6.0.1",
     "@react-native-firebase/firestore": "^6.0.1",
     "@react-native-firebase/storage": "^6.3.3",
+    "algoliasearch": "^4.1.0",
     "formik": "^1.5.8",
     "fs-extra": "^8.1.0",
     "hex-to-rgba": "^1.0.2",
@@ -22,6 +23,8 @@
     "native-base": "^2.10.0",
     "path": "^0.12.7",
     "react": "^16.9",
+    "react-instantsearch": "^6.3.0",
+    "react-instantsearch-dom": "^6.3.0",
     "react-moment": "^0.9.6",
     "react-native": "^0.61.5",
     "react-native-circular-progress": "^1.3.3",
@@ -48,7 +51,7 @@
     "react-native-track-player": "^2.0.0-rc13",
     "react-native-vector-icons": "^6.0.2",
     "react-native-video": "^5.0.2",
-    "react-navigation": "^4.0.0",
+    "react-navigation": "^4.3.1",
     "react-navigation-backhandler": "^1.4.0",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
