--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-modalbox": "^1.6.0",
     "react-native-parallax-header": "^1.1.3",
     "react-native-progress": "^4.0.3",
+    "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-react-native-recorder": "file:react-native-react-native-recorder",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.23",
