--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-fbsdk": "^1.0.4",
     "react-native-fontawesome": "^5.7.0",
     "react-native-gesture-handler": "^1.4.0",
+    "react-native-get-random-values": "^1.3.1",
     "react-native-image-picker": "^1.0.1",
     "react-native-image-resizer": "^1.2.0",
     "react-native-linear-gradient": "^2.5.4",
@@ -42,6 +43,7 @@
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
     "react-native-parallax-header": "^1.1.3",
+    "react-native-pdf": "^6.1.1",
     "react-native-progress": "^4.0.3",
     "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-react-native-recorder": "file:react-native-react-native-recorder",
@@ -54,6 +56,7 @@
     "react-native-tags-input": "^1.0.9",
     "react-native-vector-icons": "^6.0.2",
     "react-native-video": "^5.0.2",
+    "react-native-webview": "^9.1.4",
     "react-navigation": "^4.3.1",
     "react-navigation-backhandler": "^1.4.0",
     "react-navigation-drawer": "^2.3.3",
@@ -65,6 +68,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.12.0",
     "stream": "0.0.2",
     "yup": "^0.27.0"
   },
