--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@ xmlns:tools="http://schemas.android.com/tools"
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -46,7 +47,10 @@ xmlns:tools="http://schemas.android.com/tools"
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
         <!-- Accepts URIs that begin with "example://gizmos” -->
-        <data android:scheme="http" android:host="www.papyruspodcasts.com" />
+        <data android:scheme="http" android:host="www.google.com" />
+        <data android:scheme="https" android:host="www.google.com" />
+        <!-- <data android:scheme="http" android:host="www.papyruspodcasts.com" /> -->
+        <data android:scheme="https" android:host="www.papyruspodcasts.com" />
     </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
