--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-tag-select": "^2.0.0",
     "react-native-tags-input": "^1.0.7",
     "react-native-text-ticker": "^1.3.0",
+    "react-native-track-player": "^1.2.3",
     "react-native-video": "^4.4.1",
     "react-navigation": "^4.3.1",
     "react-navigation-backhandler": "^1.4.0",
