--- a/ios/Papyrus_60/Info.plist
+++ b/ios/Papyrus_60/Info.plist
@@ -83,8 +83,26 @@
 		<string>Proxima-Nova-Black.otf</string>
 		<string>Proxima-Nova-Bold.otf</string>
 		<string>Proxima-Nova-Extrabold.otf</string>
-		<string>Proxima-Nova-Regular.otf</string>
+		<string>Montserrat-Regular.otf</string>
 		<string>Proxima-Nova-Thin.otf</string>
+		<string>Montserrat-Black.ttf</string>
+		<string>Montserrat-BlackItalic.ttf</string>
+		<string>Montserrat-Bold.ttf</string>
+		<string>Montserrat-BoldItalic.ttf</string>
+		<string>Montserrat-ExtraBold.ttf</string>
+		<string>Montserrat-ExtraBoldItalic.ttf</string>
+		<string>Montserrat-ExtraLight.ttf</string>
+		<string>Montserrat-ExtraLightItalic.ttf</string>
+		<string>Montserrat-Italic.ttf</string>
+		<string>Montserrat-Light.ttf</string>
+		<string>Montserrat-LightItalic.ttf</string>
+		<string>Montserrat-Medium.ttf</string>
+		<string>Montserrat-MediumItalic.ttf</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-Bold.ttf</string>
+		<string>Montserrat-SemiBoldItalic.ttf</string>
+		<string>Montserrat-Thin.ttf</string>
+		<string>Montserrat-ThinItalic.ttf</string>
 	</array>
 </dict>
 </plist>
