--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,8 +140,8 @@ android {
         applicationId "com.papyrus_60"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 16
-        versionName "1.0.15"
+        versionCode 17
+        versionName "1.0.16"
         multiDexEnabled true
     }
     splits {
@@ -173,6 +173,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            multiDexEnabled true
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -223,6 +224,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-detect-navbar-android')
+    compile(project(':react-native-device-info')) {
+        exclude group: 'com.google.android.gms'
+    }
     compile 'com.facebook.android:facebook-android-sdk:[4,5)' 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
