--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-circular-progress": "^1.3.3",
     "react-native-detect-navbar-android": "^0.3.0",
+    "react-native-device-info": "^5.6.1",
     "react-native-elements": "^1.2.7",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fbsdk": "^1.0.4",
@@ -47,6 +48,7 @@
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
     "react-native-parallax-header": "^1.1.3",
+    "react-native-popup-menu": "^0.15.7",
     "react-native-progress": "^4.0.3",
     "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-react-native-recorder": "file:react-native-react-native-recorder",
