--- a/ios/Papyrus_60/Info.plist
+++ b/ios/Papyrus_60/Info.plist
@@ -99,10 +99,26 @@
 		<string>Montserrat-Medium.ttf</string>
 		<string>Montserrat-MediumItalic.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
-		<string>Montserrat-Bold.ttf</string>
 		<string>Montserrat-SemiBoldItalic.ttf</string>
 		<string>Montserrat-Thin.ttf</string>
 		<string>Montserrat-ThinItalic.ttf</string>
+		<string>Montserrat-SemiBold.ttf</string>
+		<string>MilkMustacheBB-Bold.ttf</string>
+		<string>MilkMustacheBB-Reg.ttf</string>
+		<string>Adamina-Regular.ttf</string>
+		<string>Andika-R.ttf</string>
+		<string>Benne-Regular.otf</string>
+		<string>Caudex-Bold.ttf</string>
+		<string>Caudex-Regular.ttf</string>
+		<string>HeadlandOne-Regular.ttf</string>
+		<string>MarkaziText-Bold.ttf</string>
+		<string>MarkaziText-Medium.ttf</string>
+		<string>MarkaziText-Regular.ttf</string>
+		<string>MarkaziText-SemiBold.ttf</string>
+		<string>Spectral-Bold.ttf</string>
+		<string>Spectral-Medium.ttf</string>
+		<string>Spectral-Regular.ttf</string>
+		<string>Spectral-SemiBold.ttf</string>
 	</array>
 </dict>
 </plist>
