--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "stream": "0.0.2",
+    "toggle-switch-react-native": "^2.1.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
