(i) Redux store moved to fifferent file store.js (ii) TrackPlayer listener to remote events only in service.js (iii) GIF upto 1 MB support added
Former-commit-id: 877fd119877e672e4027a1b1b106e0ce83ccd0b9

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,8 +140,8 @@ android {
         applicationId "com.papyrus_60"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 23
-        versionName "1.0.22"
+        versionCode 24
+        versionName "1.0.23"
         multiDexEnabled true
     }
     splits {
@@ -211,6 +211,7 @@ android {
 dependencies {
     implementation project(':react-native-extra-dimensions-android')
     implementation project(':react-native-svg')
+    implementation 'com.facebook.fresco:animated-gif:2.0.0'   //use
     implementation(project(":react-native-google-signin")){
         exclude group: "com.google.android.gms" // very important
     }
