(i) SaveExploreBooks and RepostPodcastsScreen added so that user can save books & repost podcasts when user reaches his empty SAVED & Reposts Sections (ii) Open settings to allow permissions when user keeps denying permissions (iii) remote-duck event modified as data.permanent was not taken into account earlier (iv) complete flips and audioFlips walkthrough (v) loading in audioFlips (vi) onSnapshot in ProfileFlipScreen (vii) BookName in Flips made optional
Former-commit-id: 56a61f5af77e6a52e886befca817152cc52cc258

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -226,6 +226,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-get-real-path')
     compile project(':react-native-detect-navbar-android')
+    compile project(':react-native-open-settings')
     compile(project(':react-native-device-info')) {
         exclude group: 'com.google.android.gms'
     }
