--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-material-menu": "^1.0.0",
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
+    "react-native-open-settings": "^1.0.1",
     "react-native-parallax-header": "^1.1.3",
     "react-native-permissions": "^2.1.5",
     "react-native-popup-menu": "^0.15.7",
