(i) Release to Internal Test - 1.0.28 (ii) react-native-agora added (iii) Video Call feature added - VideoChatScreen.js (iv) Video conversations shown in ProfileTabNavigator (v) Reposts & SAVED tab removed from ProfileTabNavigator (vi) Added STATUS_BAR_HEIGHT as marginTop in almost every screen so as to use the STATUS Bar in VideoScreen (vii) Added requestLegacyExternalStorage in AndroidManifest.xml for API level 29 SDK (viii) Added cloud function - sendRequestToAgora to send API requests to Agora (ix) INVITE type activity added in ActivityScreen & corresponding change in addActivity cloud function (x) InviteUserScreen added
Former-commit-id: ca7625e08355cf372128b057c3687c34b26a4ab7

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@ xmlns:tools="http://schemas.android.com/tools"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
       android:theme="@style/AppTheme"
+      android:requestLegacyExternalStorage="true"
       >
 
       <provider android:authorities="com.facebook.app.FacebookContentProvider2518782285059973"
