--- a/functions/package.json
+++ b/functions/package.json
@@ -13,12 +13,14 @@
     "node": "10"
   },
   "dependencies": {
-    "firebase": "^7.9.3",
-    "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0",
     "@google-cloud/storage": "^4.3.1",
     "algoliasearch": "^3.35.1",
+    "axios": "^0.20.0",
+    "firebase": "^7.21.0",
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.3.0",
     "fs-extra": "^8.1.0",
+    "request": "^2.88.2",
     "sharp": "^0.22.1"
   },
   "devDependencies": {
