--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-instantsearch-dom": "^6.3.0",
     "react-moment": "^0.9.6",
     "react-native": "^0.62.2",
+    "react-native-agora": "^3.0.1",
     "react-native-animatable": "^1.3.3",
     "react-native-audio-recorder-player": "^2.5.2",
     "react-native-circular-progress": "^1.3.3",
